refactor user model, change datamodel